<resources>
    <string name="app_name">HelpApp</string>
    <string name="activity_bilbao">Bilbao</string>
    <string name="activity_accident">Accident</string>
    <string name="activity_goods">Goods</string>
    <string name="activity_health">Health</string>
    <string name="activity_violence">Violence</string>
    <string name="activity_fire">Fire</string>
    <string name="activity_content">Content</string>
    <string name="activity_test">Test</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_records">Records</string>
    <string name="btn_prev">PREV</string>
    <string name="btn_bilbao">Bilbao</string>
    <string name="btn_getReady">Get Ready</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_accident">Accident</string>
    <string name="btn_goods">Stolen/Lost Goods</string>
    <string name="btn_health">Health</string>
    <string name="btn_violence">Violence</string>
    <string name="btn_fire">Fire</string>
    <string name="btn_map">Map</string>
    <string name="btn_records">Records</string>
    <string name="btn_traffic">Traffic</string>
    <string name="btn_domestic">Domestic</string>
    <string name="btn_papers">Papers</string>
    <string name="btn_theft">Theft</string>
    <string name="btn_relative">Relative</string>
    <string name="btn_luggage">Luggage</string>
    <string name="btn_emergency">Emergency</string>
    <string name="btn_consultation">Consultation</string>
    <string name="btn_pharmacy">Pharmacy</string>
    <string name="btn_rape">Rape</string>
    <string name="btn_brawl">Brawl</string>
    <string name="btn_building">Building</string>
    <string name="btn_route">Route</string>
    <string name="btn_send">Send</string>
    <string name="btn_finishTest">Finish</string>
    <string name="btn_nextTest">Next</string>
    <string name="btn_record">Record Audio</string>
    <string name="btn_open_audio">Open Audio</string>
    <string name="no_micro">Your device has no micro</string>
    <string name="no_app">Your device has no micro app</string>
    <string name="user">User: </string>
    <string name="password">Password: </string>
    <string name="enter_password">enter password</string>
    <string name="enter_user">enter user</string>
    <string name="login">Login</string>
    <string name="signin">Sign Up</string>
</resources>
