<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.helpappandroid.helpappandroid.GoodsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button android:id="@+id/goods_btn_papers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_papers"
            android:onClick="papers"/>
        <Button android:id="@+id/goods_btn_theft"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_theft"
            android:onClick="theft"/>
        <Button android:id="@+id/goods_btn_relative"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_relative"
            android:onClick="relative"/>
        <Button android:id="@+id/goods_btn_luggage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_luggage"
            android:onClick="luggage"/>
    </LinearLayout>

    <!-- Here is the footer-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/helpapp3" />
        <Button android:id="@+id/main_btn_prev"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_prev"
            android:drawableLeft="@drawable/left_arrow"
            android:onClick="back"/>
    </LinearLayout>

</RelativeLayout>
