<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.helpappandroid.helpappandroid.AccidentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <Button android:id="@+id/accident_btn_traffic"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_traffic"/>
    <Button android:id="@+id/accident_btn_domestic"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_domestic"/>
    </LinearLayout>

    <!-- Here is the footer-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/HelpApp3" />
        <Button android:id="@+id/main_btn_prev"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_prev"/>
    </LinearLayout>

</RelativeLayout>
